# snake-cli

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: Key.h  KeyHandler.h  Terminal.h
include/game/: Food.h  Game.h  Snake.h
include/util/: Matrix.h
src/: Key.c  KeyHandler.c  Terminal.c
src/game/: Food.c  Game.c  Snake.c
src/util/: Matrix.c
